--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ Theme Name: Travel Planet
 Theme URI: http://bestwebsoft.com/theme/travel-planet/
 Author: the BestWebSoft team
 Author URI: https://github.com/bestwebsoft
-Description: Are you an traveler who looks for a perfect theme that would highlight your stories without being too distracting? Or are you a handyman who wishes to share the nowledge with people worldwide via simplistic yet utterly elegant blog? Or maybe you seek a theme with an exquisite and balanced interface for a travel or photography magazine? Whether your purposes match or transcend our guesses, we are delighted to introduce Travel Planet - a streamlined and professional theme that will serve as a perfect entourage for your ideas. Travel Planet is ideal for Tourist Agencies, Travel Diaries, Tourist Destinations, Travel Magazines, Travel Guides, Photography, Handmade and DIY Workshops, Cuisine, Event Information, Culture Overviews and Tutorials, or any other purposes you feel are appropriate.
-Version: 1.6
+Description: Are you a traveller who looks for a perfect theme that would highlight your stories without beeing too distracting? Or are you a handyman who wishes to share the knowledge with people wordlwide via simplistic yet utterly elegant blog? Or maybe you seek a theme with an exquisite and balanced interface for a travel or photography magazine? Whether your purposes match or transcend our guesses, we are delighted to introduce Travel Planet - a streamlined and professional theme that will serve as a perfect entourage for your ideas. Travel Planet is ideal for Tourist Agencies, Travel Diaries, Tourist Destinations, Travel Magazines, Travel Guides, Photography, Handmade and DIY Workshops, Cuisine, Event Information, Culture Overviews and Tutorials, or any other purposes you feel are appropriate. Check out this theme's demo at http://bestwebsoft.com/wordpress_demo_theme/travelplanet/
+Version: 1.7
 License: GNU General Public License v3
 License URI: http://www.gnu.org/licenses/gpl-3.0.en.html
 Tags: right-sidebar, custom-menu, featured-images, white, orange, gray
